<resources>
    <string name="app_name">위젯모음1</string>
    <string name="home_title">HOME</string>
    <string name="radio_title">Radio Group &amp; Button</string>
    <string name="checkbox_title">Check Box</string>
    <string name="toggle_switch_title">Toggle &amp; Switch</string>
    <string name="progressbar_title">Progress Bar</string>
    <string name="seekbar_title">Seek Bar</string>
    <string name="ratingbar_title">Rating Bar</string>

    <!-- 라디오 그룹 & 버튼 -->
    <string name="radio_vertical_title">1.어떤 커피를 자주 마시나요?</string>
    <string name="radio_horizontal_title">2.디저트 종류도 말씀해주세요.</string>

    <!-- 체크박스 -->
    <string name="checkbox_horizontal_titla">1.소유한 게임기기를 알려주세요.</string>
    <string name="checkbox_vertical_title">2.선호하는 게임 장르를 선택해주세요.</string>

    <!-- 시크바 -->
    <string name="volumeTitle">1.볼륨 조절</string>
    <string name="screenBrightTitle">2.화면 밝기 조절</string>

    <!--    -->
</resources>